# pr_reviewer_qiskit

./: .env.dist  .gitignore  APPLY_FIXES.sh  CONTRIBUTING.md  Document1.docx  LICENSE  QiskitSage_ClaudeCode_Prompt.md  README.md  README_LOCAL_LLM.md  examples.py  main.py  main.py.patch  pyproject.toml  test_ollama.py
docs/: APPENDIX.md  CONCLUSION.md  ENHANCEMENTS.md  FINAL_ANALYSIS_20231024.md  FINAL_TEST_RESULTS.md  FIX_AGENT_RESPONSES.md  IMPLEMENTATION_SUMMARY.md  INTEGRATE_ORCHESTRATOR.md  ORCHESTRATOR_TEST_RESULTS.md  QISKITSAGE_ANALYSIS.md  QiskitSage_IBM_Submission.docx  QiskitSage_IBM_Submission.md  RESULTS_AND_DISCUSSION.md
qiskitsage/: __init__.py  ast_analyser.py  config.py  context_builder.py  context_graph.py  github_client.py  models.py  orchestrator.py  quality_gate.py  renderer_clean.py  renderer_fixed.py  rust_analyser.py
qiskitsage/agents/: base_agent.py  ffi_agent.py  issue_agent.py  judge_agent.py  performance_agent.py  semantic_agent.py  syntax_agent.py
qiskitsage/prompts/: ffi_prompt.py  judge_prompt.py  performance_prompt.py  semantic_checker.py  syntax_prompt.py
tests/: test_acceptance.py  test_context_builder.py
