[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qiskitsage"
version = "0.1.0"
description = "AI-powered PR review for Qiskit."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ollama>=0.4.0",
    "PyGithub>=2.1.1",
    "qiskit>=1.2.0",
    "numpy>=1.26.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-rust>=0.21.0",
    "python-dotenv>=1.0.0",
    "pytest>=7.4.0"
]

[project.scripts]
qiskitsage = "main:main"
